2008-09-17  H.J. Lu  <hongjiu.lu@intel.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	PR ld/3191
	* dwarf2.c (struct adjusted_section): Renamed from struct
	loadable_section.
	(struct dwarf2_debug): Adjust for renaming.  Add version field.
	(read_attribute_value): Correctly handle DW_FORM_ref_addr for
	DWARF3.
	(find_abstract_instance_name): Pass a pointer to
	attribute instead of offset.  For DW_FORM_ref_addr, get the
	entry at the offset from the .debug_info section.
	(scan_unit_for_symbols): Update.
	(parse_comp_unit): Allow DWARF3.  Save the version.
	(unset_sections): Update for renaming.
	(place_sections): Likewise.  Set new VMAs for DWARF sections
	also.

2008-09-17  Bob Wilson  <bob.wilson@acm.org>

        * elf32-xtensa.c (elf_xtensa_check_relocs): Check for negative refcount.

2008-09-17  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.18.91
	* configure: Regenerated.

2008-09-17  Jan Kratochvil  <jan.kratochvil@redhat.com>

	PR 6893 - Do not consider FDEs for discarded sections as invalid.
	* elf-eh-frame.c (_bfd_elf_parse_eh_frame): New REQUIRE_CLEARED_RELOCS.
	Consider FDEs with cleared relocations as valid and ignorable.

2008-09-16  Alan Modra  <amodra@bigpond.net.au>

	PR 6844
	* elf32-ppc.c (SYM_VAL): Define.  Use throughout to find symbol vma.
	(ppc_elf_relocate_section): Correct GOT offset calculation.
	(ppc_elf_finish_dynamic_symbol): Use PPC_HA and PPC_LO.
	(ppc_elf_finish_dynamic_sections): Likewise.  Error if
	htab->elf.hgot symbol is not defined in htab->got section.

2008-09-16  Alan Modra  <amodra@bigpond.net.au>

	PR 6888
	* elf32-ppc.c (ppc_elf_relocate_section): Handle NULL symbol section
	on R_PPC_TOC16, R_PPC_SDAREL16, R_PPC_EMB_SDA2REL, R_PPC_EMB_SDA21,
	R_PPC_EMB_RELSDA, R_PPC_SECTOFF* relocs.

2008-09-09  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.18.90
	* configure: Regenerate.

2008-09-09  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".